cloud/w10/day-a/04-gatekeeper-policies/constraints/require-owner-label-audit.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: ns-must-have-owner-audit
spec:
  enforcementAction: dryrun # Chỉ quét và ghi nhận log, không block lệnh deploy
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    labels: ["owner"]
